# audio-visualizer

./: .gitignore  CMakeLists.txt  camera.c  camera.h  font.c  font.h  inputstate.h  main.c  menu.c  menu.h  oldmain.c  particle.c  particle.h  readme.md  vector.c  vector.h  vector2.c  vector2.h
core/: app_state.c  app_state.h  event_handler.c  event_handler.h  menu.c  menu.h
graphics/: camera.c  camera.h  font.h  geometry.c  geometry.h  obj_parser.c  obj_parser.h  particle.h  ray.c  ray.h  skybox.c  skybox.h  visualization.c  visualization.h
music/: album.c  album.h  artist.h  audio_parser.c  audio_parser.h  database.c  database.h  genre.h  play_queue.c  play_queue.h  playlist.c  playlist.h  song.c  song.h
util/: queue.c  queue.h  vector.h
